--- a/backend-gcp.config
+++ b/backend-gcp.config
@@ -1,3 +1,3 @@
-    bucket      = "afaedda-tf-state"
+    bucket      = "<your-tf-state-bucket-name>"
     prefix      = "terraform/state/dev"
-    credentials = "../tf-gke-keyfile.json"
+    credentials = "<your-gcp-credentials-file>"
